For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 18.5

** `[[indeterminate]]`
Added support for C++26 `indeterminate` attribute.

** Fixed explanations of pointers/references with storage classes
Explanations of things like:

    cdecl> explain static int *p
    declare p as static pointer to integer

are now correct.


* Changes in Cdecl 18.4.2

** Fixed issue #38: Accumulating newlines in command-line history
A newline should be added to the command-line only _after_ it's been added to
the history.


* Changes in Cdecl 18.4.1

** readline.h & stdio.h fix
Compensating for the apparent fact that genuine GNU readline.h (wrongly)
requires a manual #include <stdio.h>.


* Changes in Cdecl 18.4

** C++26
Initial support for C++26 has been added, specifically `= delete("reason")` is
now supported.

However, since C++26 is (at least) 2 years away, the default language for C++
is still C++23.

** Placemarker for empty macro argument
Macros that can take a single argument can also accept no arguments since it's
interpreted as an argument of a placemarker, e.g.:

    cdecl> #define M1(A)    [A]
    cdecl> expand M1()
    M1() => [A]
    | A =>
    M1() => []

is correct.


* Changes in Cdecl 18.3

** `no` option autocompletion
Since the "no" options are of the form `nofoo` and not `no-foo`, if the user
types:

    cdecl> set no-<tab>

i.e., includes '-', it's changed to just "no" so **cdecl** will still present
all the "no" options.

** Dynamic `__FILE__` & `__LINE__` macros.
The value of `__FILE__` is now the current input file, if any, or `stdin`.  The
value of `__LINE__` is the line numer within that file, if any.

** `language` option
The `lang` option has been replaced by `language` to match the `--language`