@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "September 16, 2024" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "July 5, 2025" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -2732,6 +2732,25 @@ since they are required by \f(CWoperator<=>()\fP.
 \f(CWstd::wospanstream\fP,
 \f(CWstd::wspanbuf\fP,
 \f(CWstd::wspanstream\fP
+.hy
+.ad
+.SS C++26
+\f(CWstd::hazard_pointer\fP,
+\f(CWstd::hive_limits\fP,
+\f(CWstd::rcu_domain\fP,
+\f(CWstd::text_encoding\fP,
+.P
+\f(CWstd::contracts::assertion_kind\fP,
+\f(CWstd::contracts::contract_violation\fP,
+\f(CWstd::contracts::detection_mode\fP,
+\f(CWstd::contracts::evaluation_semantic\fP,
+.P
+\f(CWstd::linalg::column_major_t\fP,
+\f(CWstd::linalg::explicit_diagonal_t\fP,
+\f(CWstd::linalg::implicit_unit_diagonal_t\fP,
+\f(CWstd::linalg::lower_triangle_t\fP,
+\f(CWstd::linalg::row_major_t\fP,
+\f(CWstd::linalg::upper_triangle_t\fP
 .hy
 .ad
 .SH PREDEFINED MACROS
